# nanobot-channel-endpoint

./: pyproject.toml
nanobot_channel_endpoint/: __init__.py  channel.py
tests/: test_endpoint_streaming_webchat_server.py  test_endpoint_webchat_server.py
